--- a/MvcApp/Web.config
+++ b/MvcApp/Web.config
@@ -18,7 +18,7 @@
     <compilation debug="true" targetFramework="4.5.2" />
     <httpRuntime targetFramework="4.5.2" />
     <authentication mode="Forms">
-      <forms loginUrl="Home/Login" timeout="2880" />
+      <forms loginUrl="Login" timeout="2880" />
     </authentication>
   </system.web>
   <runtime>
