--- a/MvcApp/MvcApp.csproj
+++ b/MvcApp/MvcApp.csproj
@@ -116,7 +116,7 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
-    <Content Include="Content\Home.css" />
+    <Content Include="Content\Main.css" />
     <Content Include="Global.asax" />
     <Content Include="Models\AddressBook.Context.tt">
       <Generator>TextTemplatingFileGenerator</Generator>
